Task 8: user select

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,14 @@
 </head>
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
+<p>Select user:</p>
+<form action="users" method="post" name="userSelect">
+    <select name="userId" id="userId">
+        <option value="1">Admin</option>
+        <option value="2">User</option>
+    </select>
+    <button type="submit">Select</button>
+</form>
 <hr>
 <ul>
     <li><a href="users">Users</a></li>
